# Scrooge-Coin-with-Cpp

./: CMakeLists.txt  LICENSE  README.md
include/: Transaction.hpp  TxHandler.hpp  UTXO.hpp  UTXOPool.hpp
src/: Transaction.cpp  TxHandler.cpp  UTXOPool.cpp  main.cpp
